# RealTimeSpeechToText

./: Notes.md
watson-streaming-stt/: README.rst  requirements.txt  setup.cfg  speech.cfg  transcribe.py
