[metadata]
name = watson_sstt
summary = Watson Streaming Speech to Text
description-file =
    README.rst
author = Sean Dague
author-email = sean.dague@ibm.com
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    watson_sstt

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
